task: swap assets

--- a/resources/variables.css
+++ b/resources/variables.css
@@ -7,7 +7,7 @@
 
   /* Colors */
   --text-color: white;
-  --background-image: url("resources/background.jpg");
+  --background-image: url("resources/background.png");
   --widget-bg: #fff;
   --widget-text-color: #515151;
   --bullet-color: #d33;
