--- a/style.css
+++ b/style.css
@@ -1,15 +1,9 @@
 @import url("resources/variables.css");
 
-html, body {
-  height: 100%;
-  width: 100%;
-  margin: 0;
-  padding: 50px;
+html {
   box-sizing: border-box;
   font-family: var(--font-primary);
   color: var(--text-color);
-  display: flex;
-  flex-direction: column;
 }
 
 body {
@@ -65,6 +59,9 @@ footer {
   flex-direction: column;
   align-items: flex-end;
   margin-top: var(--spacing-large);
+  position: fixed;
+  bottom: 3vh;
+  right: 2vh;
 }
 
 footer p {
@@ -126,6 +123,7 @@ footer p {
     width: 28px;
     height: 28px;
   }
+
 }
 
 .follow-text {
