--- a/style.css
+++ b/style.css
@@ -1,9 +1,15 @@
 @import url("resources/variables.css");
 
-html {
+html, body {
+  height: 100%;
+  width: 100%;
+  margin: 0;
+  padding: 50px;
   box-sizing: border-box;
   font-family: var(--font-primary);
   color: var(--text-color);
+  display: flex;
+  flex-direction: column;
 }
 
 body {
@@ -59,9 +65,6 @@ footer {
   flex-direction: column;
   align-items: flex-end;
   margin-top: var(--spacing-large);
-  position: fixed;
-  bottom: 3vh;
-  right: 2vh;
 }
 
 footer p {
@@ -123,7 +126,6 @@ footer p {
     width: 28px;
     height: 28px;
   }
-
 }
 
 .follow-text {
