chore: switch background

--- a/resources/variables.css
+++ b/resources/variables.css
@@ -7,7 +7,7 @@
 
   /* Colors */
   --text-color: white;
-  --background-image: url("resources/background.png");
+  --background-image: url("assets/images/background-02.jpg");
   --widget-bg: #fff;
   --widget-text-color: #515151;
   --bullet-color: #d33;
