chore: move css files to /assets/css

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,4 +1,6 @@
-@import url("resources/variables.css");
+@import url("variables.css");
+@import url("newsletter.css");
+@import url("widget.css");
 
 html, body {
   height: 100%;
@@ -28,7 +30,6 @@ body {
   width: 600px;
 }
 
-/* Background image */
 body::before {
   content: "";
   position: fixed;
@@ -40,7 +41,6 @@ body::before {
   z-index: -1;
 }
 
-/* Blocks that should each occupy their own line */
 .block {
   display: block;
   text-align: left;
@@ -51,7 +51,6 @@ p {
   margin: var(--spacing-small) 0;
 }
 
-/* Widget section */
 .widget-section {
   max-width: 500px;
   padding: var(--spacing-medium);
@@ -59,7 +58,6 @@ p {
   margin-top: var(--spacing-large);
 }
 
-/* Footer */
 footer {
   display: flex;
   flex-direction: column;
@@ -72,7 +70,6 @@ footer p {
   margin-bottom: var(--spacing-small);
 }
 
-/* Social icons */
 .social-icons {
   list-style: none;
   display: flex;
@@ -103,7 +100,6 @@ footer p {
   opacity: 0;
 }
 
-/* Responsive adjustments */
 @media (max-width: 600px) {
   h1 {
     font-size: 3rem;
