fix: fix the background

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -33,11 +33,12 @@ body::before {
   position: fixed;
   top: 0;
   left: 0;
-  width: 100vw;
-  height: 100vh;
+  right: 0;
+  bottom: 0;
   background: var(--background-image) center/cover no-repeat;
   z-index: -1;
 }
+
 
 .block {
   display: block;
