task: update assets as per the documentation provided

--- a/_includes/_pricetable.html
+++ b/_includes/_pricetable.html
@@ -70,5 +70,21 @@
         </div>
       </div>
     </div>
+    <div class="row mt-5 mb-5">
+      <div class="col">
+        <div class="card border box-active">
+          <div class="card-header py-3 text-center">
+            <img class="mb-2" src="{{ site.baseurl }}/img/assets/icon-inactive.svg" alt="" />
+            <h3 class="my-0 fw-bold fs-4">Accompanying Persons</h3>
+          </div>
+          <div class="card-body">
+            <p class="fs-5 text-center">
+              An accompanying person is an adult who travels with a conference attendee for the occasion but does not participate in the conference sessions or workshops. To ensure they too have fun, the Scala Days conference organizers are offering a special “Accompanying Person” ticket, which grants access to the welcome reception, community party, and lunches at the conference venue during the event. Additionally, the ticket includes a curated daytime program featuring activities such as a guided tour of Lausanne and a chocolate tasting experience. 
+              The cost for an accompanying person is CHF 400 and can be added to your booking during the registration process.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </section>
