task: add ticket page and implement few fixes

--- a/_sass/_user-styles.scss
+++ b/_sass/_user-styles.scss
@@ -207,6 +207,11 @@
         background-size: cover;
     }
 
+    &.tickets {
+        background: url("../img/assets/madrid/feature-lausanne-03.png") no-repeat center center;
+        background-size: cover;
+    }
+
     &.workshops {
         background: url("../img/assets/hero-background-workshops.jpg") no-repeat center center;
         background-size: cover;
