--- a/_includes/_pricetable-home.html
+++ b/_includes/_pricetable-home.html
@@ -1,6 +1,12 @@
 <section id="pricetable" class="py-5">
   <div class="container py-0 py-lg-5">
-     
+    <div class="row mb-5">
+      <div class="col-md-8">
+          <span class="text-primary text-uppercase fw-bold mb-2 d-inline-block">{{
+              site.data.conference.pricetable-subtitle }}</span>
+          <h2 class="mb-0">{{ site.data.conference.pricetable-title }}</h2>
+      </div>
+  </div>
       <div class="table-responsive">
           <table class="table text-center">
             <thead>
@@ -46,7 +52,7 @@
         <div class="row">
           <div class="col-md-7 mx-auto">
               <div class="d-flex justify-content-center align-items-center">
-                <p>Ticket prices are detailed in Swiss Franc (CHF) and <u>include</u> VAT.</p>
+                <a class="btn btn-primary btn-lg" href="/tickets.html">Book a ticket</a>
               </div>
           </div>
         </div>
