--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -8,8 +8,7 @@
 		{% include _about.html %}
     {% include _countdown.html %}
     {% include _features.html %}
-		{% include _sponsors-home.html %}
-		{% include _pricetable.html %}
+		{% include _pricetable-home.html %}
 		{% include _team-home.html %}
     {% include _host.html %}
     {% include _footer.html %}
