--- a/_includes/_pricetable.html
+++ b/_includes/_pricetable.html
@@ -6,13 +6,13 @@
             <thead>
               <tr>
                 <th class="align-top" style="width: 50%;">
-                  <h4 class="fs-3 text-start mt-3">Ticket <br>Options</h4>
+                  <h4 class="fs-3 text-start mt-3">Ticket Options</h4>
               </th>
               </th class="align-top">
                 <th style="width: 50%;">
                   <img src="{{ site.baseurl }}/img/assets/icon-gold.svg" alt="">
-                  <h4 class="text-uppercase mb-0 mt-2">Price</h4>
-                  <span class="fw-normal mb-3 d-block">Early bird tickets on sale until April 4th</span>
+                  <h4 class="text-uppercase mb-0 mt-2">Super Early Bird</h4>
+                  <span class="fw-normal mb-3 d-block">Price Ends April 4th</span>
               </th>
               </tr>
             </thead>
