--- a/_includes/_pricetable-home.html
+++ b/_includes/_pricetable-home.html
@@ -12,38 +12,47 @@
             <thead>
               <tr>
                 <th class="align-top" style="width: 50%;">
-                  <h4 class="fs-3 text-start mt-3">Ticket <br>Options</h4>
+                  <h4 class="fs-3 text-start mt-3">Ticket Options</h4>
               </th>
               </th class="align-top">
                 <th style="width: 50%;">
-                  <img src="{{ site.baseurl }}/img/assets/icon-gold.svg" alt="">
-                  <h4 class="text-uppercase mb-0 mt-2">Price</h4>
-                  <span class="fw-normal mb-3 d-block">Early bird tickets on sale until April 4th</span>
+                  <h4 class="text-uppercase mb-0 mt-2">Super Early Bird</h4>
+                  <span class="fw-normal mb-3 d-block">Price ends on April 4.</span>
+              </th>
+               </th class="align-top">
+                <th style="width: 50%;">
+                  <h4 class="text-uppercase mb-0 mt-2">Early Bird</h4>
+                  <span class="fw-normal mb-3 d-block">Price ends on May 26.</span>
               </th>
               </tr>
             </thead>
             <tbody>
               <tr>
                 <th scope="row" class="text-start">Conference ticket</th>
-                <td class="active">CHF 750</td>
+                <td class="inactive">CHF 750</td>
+                <td class="active">CHF 850</td>
               </tr>
               <tr>
                 <th scope="row" class="text-start">Workshop ticket</th>
-                <td class="align-middle active">CHF 600</td>
+                <td class="align-middle inactive">CHF 600</td>
+                <td class="align-middle active">CHF 700</td>
               </tr>
             </tbody>
     
             <tbody>
               <tr>
                 <th scope="row" class="text-start">Bundle (Conference + Workshop) ticket</th>
-                <td class="align-middle active">CHF 1200</td>
+                <td class="align-middle inactive">CHF 1200</td>
+                <td class="align-middle active">CHF 1395</td>
               </tr>
               <tr>
                 <th scope="row" class="text-start">Student Conference Ticket</th>
+                <td class="align-middle inactive">CHF 400</td>
                 <td class="align-middle active">CHF 400</td>
               </tr>
               <tr>
                 <th scope="row" class="text-start">One-Day Conference Ticket</th>
+                <td class="align-middle inactive">CHF 560</td>
                 <td class="align-middle active">CHF 560</td>
               </tr>
             </tbody>
@@ -52,7 +61,7 @@
         <div class="row">
           <div class="col-md-7 mx-auto">
               <div class="d-flex justify-content-center align-items-center">
-                <a class="btn btn-primary btn-lg" href="/tickets.html">Book a ticket</a>
+                <a class="btn btn-primary btn-lg" href="https://register.event-works.com/lausanne/Scaladays2025/e/lk/k/">Register Now</a>
               </div>
           </div>
         </div>
