--- a/_includes/_pricetable.html
+++ b/_includes/_pricetable.html
@@ -6,38 +6,47 @@
             <thead>
               <tr>
                 <th class="align-top" style="width: 50%;">
-                  <h4 class="fs-3 text-start mt-3">Ticket Options</h4>
+                   <h4 class="fs-3 text-start mt-3">Ticket Options</h4>
               </th>
               </th class="align-top">
                 <th style="width: 50%;">
-                  <img src="{{ site.baseurl }}/img/assets/icon-gold.svg" alt="">
                   <h4 class="text-uppercase mb-0 mt-2">Super Early Bird</h4>
-                  <span class="fw-normal mb-3 d-block">Price Ends April 4th</span>
+                  <span class="fw-normal mb-3 d-block">Price ends on April 4.</span>
+              </th>
+               </th class="align-top">
+                <th style="width: 50%;">
+                  <h4 class="text-uppercase mb-0 mt-2">Early Bird</h4>
+                  <span class="fw-normal mb-3 d-block">Price ends on May 26.</span>
               </th>
               </tr>
             </thead>
             <tbody>
               <tr>
                 <th scope="row" class="text-start">Conference ticket</th>
-                <td class="active">CHF 750</td>
+                <td class="inactive">CHF 750</td>
+                <td class="active">CHF 850</td>
               </tr>
               <tr>
                 <th scope="row" class="text-start">Workshop ticket</th>
-                <td class="align-middle active">CHF 600</td>
+                <td class="align-middle inactive">CHF 600</td>
+                <td class="align-middle active">CHF 700</td>
               </tr>
             </tbody>
     
             <tbody>
               <tr>
                 <th scope="row" class="text-start">Bundle (Conference + Workshop) ticket</th>
-                <td class="align-middle active">CHF 1200</td>
+                <td class="align-middle inactive">CHF 1200</td>
+                <td class="align-middle active">CHF 1395</td>
               </tr>
               <tr>
                 <th scope="row" class="text-start">Student Conference Ticket</th>
+                <td class="align-middle inactive">CHF 400</td>
                 <td class="align-middle active">CHF 400</td>
               </tr>
               <tr>
                 <th scope="row" class="text-start">One-Day Conference Ticket</th>
+                <td class="align-middle inactive">CHF 560</td>
                 <td class="align-middle active">CHF 560</td>
               </tr>
             </tbody>
