--- a/_includes/_pricetable-home.html
+++ b/_includes/_pricetable-home.html
@@ -61,7 +61,7 @@
         <div class="row">
           <div class="col-md-7 mx-auto">
               <div class="d-flex justify-content-center align-items-center">
-                <a class="btn btn-primary btn-lg" href="https://register.event-works.com/lausanne/Scaladays2025/e/lk/k/">Register Now</a>
+                <a class="btn btn-primary btn-lg" href="/tickets">Learn More</a>
               </div>
           </div>
         </div>
