--- a/_includes/_hero-the-venue.html
+++ b/_includes/_hero-the-venue.html
@@ -1,5 +1,5 @@
 <header id="hero" class="vh-100 d-flex align-items-center justify-content-center text-center text-white">
-  <div class="cover-image the-venue z-0 hero-zoom"></div>
+  <div class="cover-image venue z-0 hero-zoom"></div>
   <div class="cover-gradient z-1"></div>
   <div class="cover-shape z-2">
     <img src="{{ site.baseurl }}/img/assets/hero-shape.svg" alt="">
@@ -8,15 +8,15 @@
     <div class="row">
       <div class="col-lg-8 mx-auto position-relative z-3">
         <h1 class="display-2 fw-bold">{{page.title}}</h1>
-        <h2 class="fw-bold mb-4">{{ site.data.conference.the-venue-hero-description}}</h2>
+        <h2 class="fw-bold mb-4">{{ site.data.conference.venue-hero-description}}</h2>
         <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-          <a class="btn btn-primary btn-lg px-4 gap-3" href="#the-venue">{{ site.data.conference.the-venue-hero-cta}}</a>
+          <a class="btn btn-primary btn-lg px-4 gap-3" href="#venue">{{ site.data.conference.venue-hero-cta}}</a>
         </div>
       </div>
     </div>
   </div>
   <div class="position-absolute bottom-0 pb-4 hero-arrow">
-    <a href="#the-venue">
+    <a href="#venue">
       <img src="{{ site.baseurl }}/img/assets/icon-arrow.svg" alt="">
     </a>
   </div>
