--- a/_includes/_pricetable-home.html
+++ b/_includes/_pricetable-home.html
@@ -24,6 +24,13 @@
                   <h4 class="text-uppercase mb-0 mt-2">Early Bird</h4>
                   <span class="fw-normal mb-3 d-block">Price ends on May 26.</span>
               </th>
+                               <h4 class="text-uppercase mb-0 mt-2">Standard</h4>
+                  <span class="fw-normal mb-3 d-block">Price ends on August 12.</span>
+              </th>
+              <th style="width: 50%;">
+                  <h4 class="text-uppercase mb-0 mt-2">Late Bird</h4>
+                  <span class="fw-normal mb-3 d-block">Price ends on August 21.</span>
+              </th>
               </tr>
             </thead>
             <tbody>
@@ -31,11 +38,15 @@
                 <th scope="row" class="text-start">Conference ticket</th>
                 <td class="inactive">CHF 750</td>
                 <td class="active">CHF 850</td>
+                <td class="inactive">CHF 950</td>
+                <td class="inactive">CHF 1050</td>
               </tr>
               <tr>
                 <th scope="row" class="text-start">Workshop ticket</th>
                 <td class="align-middle inactive">CHF 600</td>
                 <td class="align-middle active">CHF 700</td>
+                <td class="align-middle active">CHF 800</td>
+                <td class="align-middle active">CHF 900</td>
               </tr>
             </tbody>
     
@@ -44,15 +55,21 @@
                 <th scope="row" class="text-start">Bundle (Conference + Workshop) ticket</th>
                 <td class="align-middle inactive">CHF 1200</td>
                 <td class="align-middle active">CHF 1395</td>
+                <td class="align-middle active">CHF 1490</td>
+                <td class="align-middle active">CHF 1755</td>
               </tr>
               <tr>
                 <th scope="row" class="text-start">Student Conference Ticket</th>
                 <td class="align-middle inactive">CHF 400</td>
                 <td class="align-middle active">CHF 400</td>
+                <td class="align-middle active">CHF 400</td>
+                <td class="align-middle active">CHF 400</td>
               </tr>
               <tr>
                 <th scope="row" class="text-start">One-Day Conference Ticket</th>
                 <td class="align-middle inactive">CHF 560</td>
+                <td class="align-middle active">CHF 560</td>
+                <td class="align-middle active">CHF 560</td>
                 <td class="align-middle active">CHF 560</td>
               </tr>
             </tbody>
