--- a/_includes/_hero-the-venue.html
+++ b/_includes/_hero-the-venue.html
@@ -8,9 +8,9 @@
     <div class="row">
       <div class="col-lg-8 mx-auto position-relative z-3">
         <h1 class="display-2 fw-bold">{{page.title}}</h1>
-        <h2 class="fw-bold mb-4">{{ site.data.conference.venue-hero-description}}</h2>
+        <h2 class="fw-bold mb-4">{{ site.data.conference.the-venue-hero-description}}</h2>
         <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-          <a class="btn btn-primary btn-lg px-4 gap-3" href="#venue">{{ site.data.conference.venue-hero-cta}}</a>
+          <a class="btn btn-primary btn-lg px-4 gap-3" href="#the-venue">{{ site.data.conference.the-venue-hero-cta}}</a>
         </div>
       </div>
     </div>
