--- a/_includes/_modal.html
+++ b/_includes/_modal.html
@@ -6,7 +6,7 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-               <p>We are still working on this section. Subscribe to our email list for the latest updates.</p>
+               <p>The schedule will be available by the beginning of June. Subscribe to our email list for the latest updates.</p>
             </div>  
         </div>
     </div>
