fix: adjust/unify the background of the prices

--- a/_includes/_pricetable-home.html
+++ b/_includes/_pricetable-home.html
@@ -38,14 +38,14 @@
         <tr>
           <th scope="row" class="text-start">Conference ticket</th>
           <td class="inactive">CHF 750</td>
-          <td class="active">CHF 850</td>
-          <td class="inactive">CHF 950</td>
-          <td class="inactive">CHF 1050</td>
+          <td class="inactive">CHF 850</td>
+          <td class="active">CHF 950</td>
+          <td class="active">CHF 1050</td>
         </tr>
         <tr>
           <th scope="row" class="text-start">Workshop ticket</th>
           <td class="align-middle inactive">CHF 600</td>
-          <td class="align-middle active">CHF 700</td>
+          <td class="align-middle inactive">CHF 700</td>
           <td class="align-middle active">CHF 800</td>
           <td class="align-middle active">CHF 900</td>
         </tr>
@@ -55,21 +55,21 @@
         <tr>
           <th scope="row" class="text-start">Bundle (Conference + Workshop) ticket</th>
           <td class="align-middle inactive">CHF 1200</td>
-          <td class="align-middle active">CHF 1395</td>
+          <td class="align-middle inactive">CHF 1395</td>
           <td class="align-middle active">CHF 1490</td>
           <td class="align-middle active">CHF 1755</td>
         </tr>
         <tr>
           <th scope="row" class="text-start">Student Conference Ticket</th>
           <td class="align-middle inactive">CHF 400</td>
-          <td class="align-middle active">CHF 400</td>
+          <td class="align-middle inactive">CHF 400</td>
           <td class="align-middle active">CHF 400</td>
           <td class="align-middle active">CHF 400</td>
         </tr>
         <tr>
           <th scope="row" class="text-start">One-Day Conference Ticket</th>
           <td class="align-middle inactive">CHF 560</td>
-          <td class="align-middle active">CHF 560</td>
+          <td class="align-middle inactive">CHF 560</td>
           <td class="align-middle active">CHF 560</td>
           <td class="align-middle active">CHF 560</td>
         </tr>
