--- a/_includes/_pricetable.html
+++ b/_includes/_pricetable.html
@@ -10,8 +10,8 @@
               </th>
               </th class="align-top">
                 <th style="width: 20%;">
-                  <h4 class="text-uppercase mb-0 mt-2">Super Early Bird</h4>
-                  <span class="fw-normal mb-3 d-block">Price ends on April 4.</span>
+                  <h4 class="text-uppercase mb-0 mt-2"><s>Super Early Bird</s></h4>
+                  <span class="fw-normal mb-3 d-block"><s>Price ends on April 4.</s></span>
               </th>
                </th class="align-top">
                 <th style="width: 20%;">
@@ -31,41 +31,41 @@
             <tbody>
               <tr>
                 <th scope="row" class="text-start">Conference ticket</th>
-                <td class="active">CHF 750</td>
-                <td class="inactive">CHF 850</td>
-                <td class="active">CHF 950</td>
-                <td class="active">CHF 1050</td>
+                <td class="inactive"><s>CHF 750</s></td>
+                <td class="active">CHF 850</td>
+                <td class="inactive">CHF 950</td>
+                <td class="inactive">CHF 1050</td>
               </tr>
               <tr>
                 <th scope="row" class="text-start">Workshop ticket</th>
-                <td class="align-middle active">CHF 600</td>
-                <td class="align-middle inactive">CHF 700</td>
-                <td class="align-middle active">CHF 800</td>
-                <td class="align-middle active">CHF 900</td>
+                <td class="align-middle inactive"><s>CHF 600</s></td>
+                <td class="align-middle active">CHF 700</td>
+                <td class="align-middle inactive">CHF 800</td>
+                <td class="align-middle inactive">CHF 900</td>
               </tr>
             </tbody>
     
             <tbody>
               <tr>
                 <th scope="row" class="text-start">Bundle (Conference + Workshop) ticket</th>
-                <td class="align-middle active">CHF 1200</td>
-                <td class="align-middle inactive">CHF 1395</td>
-                <td class="align-middle active">CHF 1490</td>
-                <td class="align-middle active">CHF 1755</td>
+                <td class="align-middle inactive"><s>CHF 1200</s></td>
+                <td class="align-middle active">CHF 1395</td>
+                <td class="align-middle inactive">CHF 1490</td>
+                <td class="align-middle inactive">CHF 1755</td>
               </tr>
               <tr>
                 <th scope="row" class="text-start">Student Conference Ticket</th>
+                <td class="align-middle inactive"><s>CHF 400</s></td>
                 <td class="align-middle active">CHF 400</td>
                 <td class="align-middle inactive">CHF 400</td>
-                <td class="align-middle active">CHF 400</td>
-                <td class="align-middle active">CHF 400</td>
+                <td class="align-middle inactive">CHF 400</td>
               </tr>
               <tr>
                 <th scope="row" class="text-start">One-Day Conference Ticket</th>
+                <td class="align-middle inactive"><s>CHF 560</s></td>
                 <td class="align-middle active">CHF 560</td>
                 <td class="align-middle inactive">CHF 560</td>
-                <td class="align-middle active">CHF 560</td>
-                <td class="align-middle active">CHF 560</td>
+                <td class="align-middle inactive">CHF 560</td>
               </tr>
             </tbody>
           </table>
