chore: open links in a new tab

--- a/_includes/_pricetable-workshops.html
+++ b/_includes/_pricetable-workshops.html
@@ -32,7 +32,7 @@
             <div>
              
               {% if item.cta-url %}
-              <a href="{{item.cta-url}}" class="w-100 btn btn-lg btn-primary">{{item.cta}}</a>
+              <a href="{{item.cta-url}}" class="w-100 btn btn-lg btn-primary" target="_blank" rel="noopener noreferrer">{{item.cta}}</a>
               {% endif %}
             </div>
           </div>
