--- a/_includes/_head.html
+++ b/_includes/_head.html
@@ -17,7 +17,7 @@
     <meta property="og:title" content="{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}"/>
     <meta property="og:site_name" content="{{site.name}}" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="{{ site.github.url }}" />
+    <meta property="og:url" content="{{ site.url }}" />
     <meta property="og:description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 140 }}{% else %}{{ site.description }}{% endif %}"/>
     <meta property="og:keywords" content="{{site.keywords}}" />
      <meta name="og:image" content="https://scaladays.org{% if page.image %}/{{ page.image }}{% else %}{{ site.social_image | relative_url }}{% endif %}"/>
