chore: fix domain for analytics

--- a/_includes/_head.html
+++ b/_includes/_head.html
@@ -30,6 +30,6 @@
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
     <!-- Analytics -->
-    <script defer data-domain="{{ site.github.pages_hostname }}" src="https://plausible.scala-lang.org/js/plausible.js"></script>
+    <script defer data-domain="{{ site.url | hostname }}" src="https://plausible.scala-lang.org/js/plausible.js"></script>
 
 </head>
