chore: adopt Scala CoC

--- a/_includes/_footer.html
+++ b/_includes/_footer.html
@@ -14,7 +14,7 @@
                 </li>
                 {% endfor %}
                </ul>
-               <p class="text-md-end"><a class="text-white me-2" href="{{ site.baseurl }}/code-of-conduct/">Code of conduct</a></p>
+               <p class="text-md-end"><a class="text-white me-2" href="{{ site.links.code-of-conduct }}">Code of conduct</a></p>
             </div>
         </div>
     </div>
