--- a/_includes/_head.html
+++ b/_includes/_head.html
@@ -6,6 +6,9 @@
     <meta name="description" content="{{site.description}}">
     <meta name="keywords" content="{{site.keywords}}">
 
+    <!-- RSS Feed -->
+    {% feed_meta %}
+
     <meta name="twitter:card" content="summary_large_image"/>
     <meta name="twitter:description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 140 }}{% else %}{{ site.description }}{% endif %}" />
     <meta name="twitter:title" content="{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}"/>
