--- a/_includes/_nav-solid.html
+++ b/_includes/_nav-solid.html
@@ -13,9 +13,15 @@
 				<ul class="navbar-nav ms-auto mb-2 mb-lg-0 fw-bold">
 					{% for item in site.data.nav.2025 %}
 					{% if item.nav == 'nav' %}
+					{% if item.wip == true %}
+					<li class="nav-item me-lg-4">
+						<a data-bs-toggle="modal" data-bs-target="#wip-modal" class="nav-link" href="{{ item.url | relative_url }}">{{item.title}}</a>
+					</li>
+					{% else %}
 					<li class="nav-item me-lg-4">
 						<a class="nav-link" href="{{ item.url | relative_url }}">{{item.title}}</a>
 					</li>
+					{% endif %}
 					{% endif %}
 					{% endfor %}
 				</ul>
