--- a/_includes/_head.html
+++ b/_includes/_head.html
@@ -29,7 +29,7 @@
     <link rel="shortcut icon" href="{{ '/img/favicon.png' | relative_url }}">
 
     <!-- CSS -->
-    <link rel="stylesheet" type="text/css" href="{{ '/css/styles.css' | relative_url }}">
+    <link rel="stylesheet" type="text/css" href="{{ '/assets/css/styles.css' | relative_url }}">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
     <!-- Analytics -->
