chore: add js to the assets folder

--- a/_includes/_js-site.html
+++ b/_includes/_js-site.html
@@ -14,7 +14,7 @@
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
 <!-- JavaScript Bundle with Popper -->
-<script src="{{ '/js/functions.js' | relative_url }}"></script>
+<script src="{{ '/assets/js/functions.js' | relative_url }}"></script>
 <script>
   AOS.init({
     duration: 1200,
