--- a/_includes/_footer.html
+++ b/_includes/_footer.html
@@ -20,7 +20,7 @@
     </div>
 
     <div class="newsletter">
-        <p><strong>Signup for a newsletter</strong></p>
+        <p><strong>Signup to our email list for updates</strong></p>
         <div id="mc_embed_shell">
           <div id="mc_embed_signup">
             <form
