--- a/_layouts/workshops-detail.html
+++ b/_layouts/workshops-detail.html
@@ -146,9 +146,9 @@
                 {% endif %}
                 <div class="mt-3">
                     <p class="fw-bold fs-5">Are you interested in this workshop?</p>
-                    {% if workshop-price.cta and workshop-price.cta-url %}
-                        <a href="{{workshop-price.cta-url}}" class="w-100 btn btn-primary">{{workshop-price.cta}}</a>
-                    {% endif %}
+                        <div class="d-flex justify-content-center align-items-center">
+                            <a class="btn btn-primary btn-lg fw-bold my-4" href="/workshops">Register</a>
+                        </div>
                 </div>
             </div>
         </div>
