--- a/_layouts/workshops-detail.html
+++ b/_layouts/workshops-detail.html
@@ -147,7 +147,7 @@
                 <div class="mt-3">
                     <p class="fw-bold fs-5">Are you interested in this workshop?</p>
                         <div class="d-flex justify-content-center align-items-center">
-                            <a class="btn btn-primary btn-lg fw-bold my-4" href="/workshops">Register</a>
+                            <a class="btn btn-primary btn-lg fw-bold my-4" href="https://register.event-works.com/lausanne/Scaladays2025/e/lk/k/">Register now</a>
                         </div>
                 </div>
             </div>
