Add ticket purchase button to schedule and speakers sections, and create reusable ticket button include for better code organization.

--- a/_includes/_speakers.html
+++ b/_includes/_speakers.html
@@ -1,12 +1,14 @@
 <section id="speakers" class="pt-2">
     <div class="container py-0 py-lg-5">
-        <div class="row mb-5">
-            <div class="col-md-6">
+        <div class="row mb-5 align-items-center">
+            <div class="col-md-8">
                 <span class="text-primary text-uppercase fw-bold mb-2 d-inline-block">{{ site.data.conference.speakers-subtitle }}</span>
                 <h2 class="mb-4">{{ site.data.conference.speakers-title }}</h2>
                 <p class="lead">{{ site.data.conference.speakers-description }}</p>
             </div>
-
+            <div class="col-md-4">
+                {% include _buy-ticket-button.html alignment="end" %}
+            </div>
         </div>
         <div class="row">
             {% assign sorted_speakers = site.data.schedule.speakers | sort: "name" %}
@@ -45,6 +47,11 @@
                 </div>
             </div>
             {% endfor %}
+        </div>
+        <div class="row mt-5">
+            <div class="col-md-7 mx-auto">
+                {% include _buy-ticket-button.html %}
+            </div>
         </div>
     </div>
 </section>
