Add "Buy Ticket Now" button to pricetable section

--- a/_includes/_pricetable.html
+++ b/_includes/_pricetable.html
@@ -77,6 +77,13 @@
               </div>
           </div>
         </div>
+        <div class="row mt-4">
+          <div class="col-md-7 mx-auto">
+              <div class="d-flex justify-content-center align-items-center">
+                <a class="btn btn-primary btn-lg px-4 gap-3" href="https://register.event-works.com/lausanne/Scaladays2025/e/lk/k/" target="_blank" rel="noopener noreferrer">Buy Ticket Now</a>
+              </div>
+          </div>
+        </div>
 
   </div>
 </section>
