Add "Buy Ticket Now" button to hero and pricetable sections

--- a/_includes/_hero-workshops.html
+++ b/_includes/_hero-workshops.html
@@ -11,6 +11,7 @@
         </h2>
         <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
           <a class="btn btn-primary btn-lg px-4 gap-3" href="#workshops">Learn more</a>
+          <a class="btn btn-primary btn-lg px-4 gap-3" href="https://register.event-works.com/lausanne/Scaladays2025/e/lk/k/" target="_blank" rel="noopener noreferrer">Buy Ticket Now</a>
         </div>
       </div>
     </div>
@@ -20,4 +21,4 @@
       <img src="{{ site.baseurl }}/img/assets/icon-arrow.svg" alt="">
     </a>
   </div>
-</header> 
+</header>
