Add "Get in Touch" button to sponsor hero section

--- a/_includes/_hero-sponsor-editions.html
+++ b/_includes/_hero-sponsor-editions.html
@@ -10,6 +10,7 @@
         <h2 class="fw-bold mb-4">{{ site.data.conference.sponsor-hero-description}}</h2>
         <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
           <a class="btn btn-primary btn-lg px-4 gap-3" href="#the-sponsor">{{ site.data.conference.sponsor-hero-cta}}</a>
+          <a class="btn btn-primary btn-lg px-4 gap-3" href="mailto:info@scaladays.org">Get in Touch</a>
         </div>
       </div>
     </div>
@@ -19,4 +20,4 @@
       <img src="{{ site.baseurl }}/img/assets/icon-arrow.svg" alt="">
     </a>
   </div>
-</header> 
+</header>
