--- a/_layouts/workshops-detail.html
+++ b/_layouts/workshops-detail.html
@@ -31,8 +31,9 @@
             </div>
             <div class="col-lg-6 mb-4 mb-lg-0">
                 <h1 class="mb-0 fs-1">{{page.title}}</h1>
-                <div class="badge my-3 text-bg-primary">
-                    {{page.level}}
+                <div class="d-flex flex-wrap gap-2 my-3 align-items-center">
+                    <span class="badge text-bg-primary">{{page.level}}</span>
+                    <span class="badge bg-secondary">Room {{ page.order }}</span>
                 </div>
 
                 {{ content }}
