--- a/_includes/_head.html
+++ b/_includes/_head.html
@@ -15,7 +15,7 @@
     <meta name="twitter:site" content="{{site.twitter_username}}">
     <meta name="twitter:creator" content="{{site.author}}">
     <meta name="twitter:image" content="https://scaladays.org{% if page.image %}/{{ page.image }}{% else %}{{ site.social_image | relative_url }}{% endif %}"/>
-  
+
 
     <meta property="og:title" content="{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}"/>
     <meta property="og:site_name" content="{{site.name}}" />
@@ -35,4 +35,8 @@
     <!-- Analytics -->
     <script defer data-domain="{{ site.url | hostname }}" src="https://plausible.scala-lang.org/js/plausible.js"></script>
 
+    <!-- Canonical -->
+    {% if page.canonical %}
+        <link rel="canonical" href="{{ page.canonical }}">
+    {% endif %}
 </head>
