Basic sponsor support added

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,6 +5,7 @@
 <body>
     {% include _nav.html %}
     {% include _hero.html %}
+    {% include _sponsors-hero.html %}
 		{% include _about.html %}
     {% include _countdown.html %}
     {% include _features.html %}
